# termite

./: .claudeignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/termite-app/: Cargo.toml
crates/termite-app/src/: lib.rs
crates/termite-core/: Cargo.toml
crates/termite-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/termite-crypto/: Cargo.toml
crates/termite-crypto/src/: error.rs  key.rs  lib.rs  provider.rs
crates/termite-ssh/: Cargo.toml
crates/termite-ssh/src/: agent.rs  error.rs  events.rs  handler.rs  known_hosts.rs  lib.rs  session.rs  signer.rs  ssh_config.rs
crates/termite-ssh/tests/: session.rs
crates/termite-storage/: Cargo.toml
crates/termite-storage/src/: credential_store.rs  error.rs  host_store.rs  lib.rs
crates/termite-storage/tests/: keyring_store.rs
crates/termite-terminal/: Cargo.toml
crates/termite-terminal/src/: cell.rs  grid.rs  handler.rs  lib.rs  pty.rs
crates/termite-ui/: Cargo.toml
crates/termite-ui/src/: lib.rs  prompt.rs  sidebar.rs  tabbar.rs  theme.rs
src/: main.rs
