[package]
name        = "termite-crypto"
description = "Cryptographic key management for Termite"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
termite-core = { workspace = true }
zeroize      = { workspace = true }
secrecy      = { workspace = true }
thiserror    = { workspace = true }
# ssh-key, rand added in M3 when key loading/generation is implemented
