[package]
name        = "termite-crypto"
description = "Cryptographic key management for Termite"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
termite-core = { workspace = true }
zeroize      = { workspace = true }
secrecy      = { workspace = true }
thiserror    = { workspace = true }
# Pinned to the exact version `russh` depends on (see HANDOFF.md) so cargo
# resolves a single copy in the dependency tree rather than two.
ssh-key   = { version = "=0.7.0-rc.11", features = ["ed25519", "encryption"] }
rand      = { version = "0.10", features = ["thread_rng"] }
signature = "3"

[dev-dependencies]
tempfile = "3"
