[package]
name        = "termite-ssh"
description = "SSH protocol layer for Termite"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
termite-core   = { workspace = true }
termite-crypto = { workspace = true }
russh          = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
dirs           = { workspace = true }
secrecy        = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
tempfile   = "3"
rand       = { version = "0.10", features = ["thread_rng"] }
env_logger = "0.11"
