[package]
name        = "termite-storage"
description = "Configuration and credential storage for Termite"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
termite-core = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
thiserror    = { workspace = true }
# keyring, secrecy added in M3 when credential storage is implemented
