[package]
name        = "termite-terminal"
description = "Terminal emulation for Termite"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true

[dependencies]
termite-core = { workspace = true }
vte          = { workspace = true }
portable-pty = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
